syntax = "proto3";

package types.net.v1;

option go_package = "github.com/tinywideclouds/gen-platform/go/net/v1;sm_v1";

message UrnPb {
  string namespace = 1;
  string entityType = 2;
  string entityId = 3;
}
